Routes: - /register/vf (create verification link) -/register/vfCheck (check if link is still valid) - Swagger doc update
