# BackEnd/src/api-doc.yaml
@@ -53,6 +53,109 @@ paths:
                 properties:
                   message:
                     type: string
+                    
+  /register/vf:
+    post:
+      summary: create verification link .
+      tags:
+        - User
+      requestBody:
+      
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email :
+                  type : string
+              required:
+               - email 
+            example:
+              email: test2@test.com
+              
+              
+      
+            
+      responses:
+        '200':    # status code
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  link:
+                    type: string
+
+        '400':    # status code
+          description: one element missing
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+                  
+          
+        '500':    # status code
+          description: Server issues
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+                    
+  /register/vfCheck:
+    post:
+      summary: check if key is still valid (link is autogenerated by the /vf route) .
+      tags:
+        - User
+        
+      parameters:
+        - in: query
+          name: key
+          required: true
+          schema:
+            type: string
+          description: verification key
+      
+            
+      responses:
+        '200':    # status code
+          description: OK
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+
+        '400':    # status code
+          description: invalid link
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+                  
+          
+        '500':    # status code
+          description: Server issues
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  message:
+                    type: string
+  
+  
   /login:
     post:
       summary: clasic login . 
@@ -165,7 +268,7 @@ paths:
                 properties:
                   message:
                     type: string
-  
+ 
   /api/movies/select:
     get:
       summary: select movie basec ont type, title or keyword . 
